# comp_modeling

./: CMakeLists.txt
headers/: Engine.h  Molecul.h  Moleculs.h  circle.cpp  circle.h
idea/: workspace.xml
src/: Engine.cpp  Molecul.cpp  Moleculs.cpp  draw.cpp  input.cpp  main.cpp
